--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "build": "pnpm run build:mud && pnpm run build:abi && pnpm run build:typechain",
-    "build:abi": "forge clean && forge build",
+    "build:abi": "forge build",
     "build:mud": "mud tablegen && mud worldgen",
     "build:typechain": "rimraf types && typechain --target=ethers-v5 out/IWorld.sol/IWorld.json",
     "deploy:local": "pnpm run build && mud deploy",
