--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -5,7 +5,7 @@ on:
       - "*"
 
 env:
-  PROJECTNAME: dojorps
+  PROJECTNAME: abc
   REGISTRY: ${{ vars.DOCKERHUB_USERNAME}}
   VERSION: ${{github.ref_name}}
 
@@ -50,7 +50,7 @@ jobs:
           DOCKER_PASS: ${{ secrets.DOCKERHUB_TOKEN }}
 
         with:
-          destination_container_repo: oostvoort/dojorps-dev
+          destination_container_repo: oostvoort/abc
           provider: dockerhub
           short_description: ''
           readme_file: 'README.md'          
@@ -58,9 +58,9 @@ jobs:
       - name: Build, tag, and push image
         id: build-image
         run: |
-          docker build -t $REGISTRY/$PROJECTNAME-dev:${VERSION} -t $REGISTRY/$PROJECTNAME-dev:latest  .
-          docker push $REGISTRY/$PROJECTNAME-dev:latest
-          docker push $REGISTRY/$PROJECTNAME-dev:${VERSION}
+          docker build -t $REGISTRY/$PROJECTNAME:${VERSION} -t $REGISTRY/$PROJECTNAME:latest  .
+          docker push $REGISTRY/$PROJECTNAME:latest
+          docker push $REGISTRY/$PROJECTNAME:${VERSION}
 
   testImage:
     needs: [buildImage]
@@ -70,7 +70,7 @@ jobs:
         uses: aquasecurity/trivy-action@master
         with:
           scan-type: 'image'
-          image-ref: 'oostvoort/dojorps-dev:latest'
+          image-ref: 'oostvoort/abc:latest'
           severity: 'HIGH,CRITICAL' 
           exit-code: '0'      
 
@@ -88,7 +88,7 @@ jobs:
 
       - name: Lint Helm Chart         
         run: |       
-          helm lint --values ./chart/dojorps/values-dev.yaml ./chart/dojorps
+          helm lint ./chart/abc
 
   helmRelease:
     needs: [helmTest]
@@ -114,7 +114,7 @@ jobs:
           VERSION=${{github.ref_name}}
           rm -rf .cr-release-packages
           mkdir -p .cr-release-packages
-          helm package chart/dojorps --app-version=${VERSION:1} --version=${VERSION:1} --destination=.cr-release-packages
+          helm package chart/abc --app-version=${VERSION:1} --version=${VERSION:1} --destination=.cr-release-packages
 
       - name: Run chart-releaser
         # switch back to helm/chart-releaser-action if this contribution is ever mergedd
@@ -141,13 +141,21 @@ jobs:
             chmod +x /usr/local/bin/argocd
           fi
 
-      - name: Deploy Application to ArgoCD
+      - name: Deploy Application
         env:
-          ARGOCD_SERVER: ${{ vars.ARGOCD_SERVER }}
-          ARGOCD_AUTH_TOKEN: ${{ secrets.ARGOCD_AUTH_TOKEN }}   
+            ARGOCD_SERVER: ${{ vars.ARGOCD_SERVER }}
+            ARGOCD_AUTH_TOKEN: ${{ secrets.ARGOCD_AUTH_TOKEN }}   
         run: |
-          argocd app create $PROJECTNAME-dev --repo https://github.com/$GITHUB_REPOSITORY.git --revision $GITHUB_REF_NAME --path ./chart/$PROJECTNAME --values values-dev.yaml --dest-namespace $PROJECTNAME-dev  --dest-server https://kubernetes.default.svc --upsert
-          argocd app sync $PROJECTNAME-dev
-          argocd app wait $PROJECTNAME-dev
-          argocd app actions run $PROJECTNAME-dev --namespace $PROJECTNAME-dev restart --kind Deployment 
-          
+            argocd app create $PROJECTNAME \
+                --repo https://oostvoort.github.io/abc/ \
+                --path chart/  \
+                --revision ${VERSION:1} \
+                --helm-chart abc \
+                --dest-namespace $PROJECTNAME \
+                --dest-server https://kubernetes.default.svc \
+                --helm-set-string dockerImage=oostvoort/abc:${VERSION} \
+                --upsert \
+                --server $ARGOCD_SERVER \
+                --auth-token $ARGOCD_AUTH_TOKEN 
+            argocd app sync $PROJECTNAME
+            argocd app wait $PROJECTNAME
