--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -118,7 +118,8 @@ jobs:
 
       - name: Run chart-releaser
         # switch back to helm/chart-releaser-action if this contribution is ever mergedd
-        uses: askcloudarchitech/chart-releaser-action@skip-packaging-option
+        # uses: askcloudarchitech/chart-releaser-action@skip-packaging-option
+        uses: helm/chart-releaser-action@v1.5.0
         with:
           skip_packaging: true
         env:
